# devlab

./: .env.local.example  .gitignore  .prototools  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
exercises/python/: pyproject.toml
exercises/python/langchain/: 00-openai-playground.py  02-langchain-models-prompts.py  03-parsers.py  04-memory-without.py  05-memory-manual.py  06-memory-concepts.md  07-chains-problem.py  08-chains-lcel-basic.py  09-chains-sequential-simple.py  10-runnable-pass-through.py  11-chains-router.py  12-rag-embeddings.py  13-rag-completo.py  14-evaluations.py  15-agents.py
exercises/python/llm-api/: 00-openai-list-models.py  02-openai-sentiment-analysis.py  03-llm-api-anthropic.py  04-gemini-basic-chat.py  05-elevenlabs-text-to-speech.py  llm-api.py  pyproject.toml
exercises/python/practice/: 001-extract-spam-confidence.py
exercises/python/py4e/: 000-hello-world.py  001-floor-convertor.py  002-overtime-pay-calculator.py  004-while-continue-break.py  005-larges-number.py  007-largest-and_smallest.py  008-count-character-in-loop.py  009-slicing-strings.py  011-parse-text-strings.py  012-print-text.py  013-reading-file.py  014-reading-emails.py  017-double-split-pattern.py  018-create-a-sorted-word-list.py  019-build-a-list-of-senders.py  020-dictionary-for-in-get.py  021-dictionary-count-input-words.py  022-loops-and-dictionaties.py  023-find-the-most-frequent-sender.py  024-tuples-basic.py  025-tuples-and-dictionaries.py  026-tuples-sorting-list-of-tuples.py  027-tuples-order-by-key.py  028-tuples-order-by-value.py  (+13 more)
(+30 files in other folders)
