[project]
name = "devlab-python"
version = "0.1.0"
description = "Python exercises for devlab learning lab."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.97.0",
    "ddgs>=9.14.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=2.44.0",
    "google>=3.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.4",
    "openai>=2.32.0",
]
