[project]
name = "llm-api"
version = "0.1.0"
description = "A Python package for interacting with various language model APIs."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.97.0",
    "dotenv>=0.9.9",
    "elevenlabs>=2.44.0",
    "google>=3.0.0",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "openai>=2.32.0",
]
